TAIL END OF PT 1

--- a/_posts/thesis_chapters/2025-3-5-Design.md
+++ b/_posts/thesis_chapters/2025-3-5-Design.md
@@ -510,21 +510,12 @@ CREATE A NEW SUMMARY OF DISCSSION HERE.
 MOVE TO CONCLUSION?
 This chapter has explored the complexity of the interacting tools and documentation in relation to their evolution in different phases of the formative intervention process. The contradictions explored initially focused on technical and then more social dimensions of the learning design, a process which has surfaced some of the barriers to achieving the varied competencies needed to complete the text coding of a multi-media project.
 
-
-
 REVISIT RESEARCH QUESTIONS? sPECIFICALLY THE ONE FOR THIS CHAPTER
 
   - What contradictions arose in this research’s evolving design process and how were they addressed in the resulting CGD&P pedagogy?
 
-
-
-
-
-
 DOES IT? THIS IS LATER? SIGNPOSTING MORE.
 The next section synthesises the features of the design narrative, underpinned by existing research, specifically UMC, half-baked approach and constructionist design principles.
-
-
 
 To do this it employs an argumentative grammar fusing elements of DBR and CHAT concepts: specifically iterative processes, analysis of emerging tensions between systems elements, a focus on affordances and secondary stimuli (particularly in relation to participant agency), and the process of rising to the concrete through exploration of a germ cell concept.
 
@@ -603,8 +594,13 @@ Most specifically relevant to this section, is a structural feature (from resear
 
 Sign post, Chapter 7 explores this aspect in relation to data on use of GDPs.
 
+PASTED IN FROM CH 7. DRAFT 12 4 25
+For Sannino' [-@sannino_activity_2011] distinction between empirical abstraction, described as "observation and categorization", and theoretical abstraction, characterised as "practical transformation, change, and experimentation". The utility of such theoretical abstraction lies in its ability to generate "concrete manifestations and developmental forms" of the , hence the use of the term _germ cell_ [@sannino_activity_2011, p.590]. An empirical categorisation of  occurred in early stages of the research where features to be added to the game were classified as varied forms of gameplay features (see Chapter.5 and Appendix.x). The theoretical abstraction that emerged from the process of facilitation the implementation and observing the varied use of these gameplay features as socio-cultural concepts was a guiding conception is the pedagogical utility of conceiving of such game features as gameplay design patterns.
 
 The process of rising to the concrete via a germ cell concept is a powerful analytical and developmental tool [-@engestrom_embodied_2012]. In seeking the germ cell, the researcher explores complex, messy concrete processes over time to discern overarching concerns that can be expressed as a prototypical abstract germ cell concept. For this learning design, the concept and pedagogy of working with game design patterns (GDPs) emerged not only as an object of activity on a more granular scope than is typical but also as a germ cell concept valuable to both participants and facilitators. I continue the analysis of the orienting practice of GDPs as a germ cell concept in the following chapter.
+
+#### Outlining the key stages of GDP use in the structural learning design.
+
 
 In the learning design outlined in this chapter, GDPs drive stage-based instructional processes. Using terminology from Denner et al. [-@denner_does_2019], the shift from P1 to P2 represents a move from a design-build-test to a stepped, stage-based approach. Stepwise approaches introduce code structures and challenges in an initially simplistic, prototypical format for learners to experience and explore, which are subsequently replaced by more advanced models or complex instances of the task. While the initial use of GDPs in P1 was piecemeal, by P2, a more structured, stepwise approach had been implemented for participants as part of several guiding activities. GDPs were first identified through playing games in an activity adapted from Moveable Game Jams (ensure this is described or linked to) and were used as a list of features serving as a mediating planning tool. In P2, GDPs were incorporated as affordances into a starter game template, initially highlighted via facilitator interaction and later as the guiding principle of _quick start cards_ to scaffold modifications to the code template. The structure of documentation, created in response to participant requests for adding new GDPs to their games, evolved from a piecemeal format in P1 to, by the end of P2, a menu of GDP code snippets accompanied by detailed instructional documentation. In line with understandings of DBR research outputs, the identification and use of these patterns as research findings would be expressed as a set of "tentative generalisations" in the form of design heuristics drawn from the analysis of concrete practices [@hoadley_design-based_2022, p.215].
 
@@ -620,12 +616,24 @@ REMOVED - ADD BACK IN LATER?
 
 ### Summary and link to next chapter/s
 
+  - What contradictions arose in this research’s evolving design process and how were they addressed in the resulting CGD&P pedagogy?
+
+IS IT A GOOD IDEA TO TRY TO INCLUDE A SUMMARY TABLE OF THE RESONSES AND THE TENSIONS IN STRUCTURAL APPROACH. 
+
+<!-- Add as an appendix anyway -
+https://docs.google.com/document/d/18HrRPPx0-fj3PXVJTAf2dzYNTBSYGikpV_U0hu46r2c/edit?tab=t.0
+
+https://docs.google.com/document/d/1DRgpgIUfq5XIktYy-lX4WlviUDnffNc0v8SOeLGgHho/edit?tab=t.0
+
+Chart evolution.
+-->
+
 This chapter has explored the iterative development of the learning design, focusing on resolving barriers to coding and aligning with existing research principles, particularly the use-modify-create (UMC) process and constructionism. It emphasized the potential and challenges of leveraging professional tools within scaffolded environments, underscoring the pivotal role of learner-led design decisions in motivating coding practices and fostering social collaboration.
 It also described the emergence of GDP use as a reoccurring feature guiding goal formation and  structuring of supporting resources and advanced this as a germ cell of the emerging pegagogy.
 
 I have designed, introduced and revised a technology based set of tools in a process aligned with broad definitions of DBR. Using the techniques  DBR in the focus of documenting the learning desing via a design narrative and of AT in analysis of tensions and congruencies between systemic elements and attempts to resolve those tensions.
 
-SOME OF THIS IS ABOVE - EDIT DOWN
+SOME OF THIS IS ABOVE - EDIT DOWN / MERGE
 The emergence of a collection GDPs was not known before the process of working with participants began reflecting the previous chapters characterision of DBR as as open and risky in nature,  requiring me to rapidly generate new tools in response. Certain factors helped address the risk posed by the incomplete nature of the learing design, namely a tenatious group of participants in P1, and my existing experience of similar learnign environmnet participants built in previous encounters. The input of families as a responsive testing group and as detailed above, as active inputters to the evolving pedagogical approach was significant. As such, while this aspect is not extensively explored in this study, I propose there is significant potential in the input of home educating families as a consituant part in collaborative design based approaches to  uncover exisiting, situated repetoires in a way that can shape emergent practices in new learning expereiences. Specifically potential to can inform design  to produce tools and pedagogies aims which can help other facilitators seed productive community activity in other learning settings. I return to this subject in the conclusion of this thesis.
 
 As expressed in the discussion, the role of GDPs within activity is complex. The next chapter employs video data to describe and analyse the diverse applications of GDPs.
