--- a/_posts/thesis_chapters/2025-3-6-Gdps.md
+++ b/_posts/thesis_chapters/2025-3-6-Gdps.md
@@ -214,8 +214,24 @@ PULL OUT AN EXAMPLE -->
 
 ## The role of GDPs in the personal appropriation of concepts and processes
 
+THIS NEEDS REWRITING - THERE IS PERSONAL APPROPRIATION - BUT NOT NECESSARILY ALIGNED WITH CURRICULUM.
 
-As outlined in Chapter 2, the focus on curricular knowledge and related skills developed by participants is the dominant thread in research on digital coding and game making [@kafai_constructionist_2015-1; @papert_mindstorms:_1980]. The research aims of this study focus on the less explored areas of the social and cultural aspects of the coding process of novices. As such, the design of this study does not fully address the exploration of the personal appropriation plane of activity. Additionally, in this informal learning context, participants did not request exploration of concepts aligned with the computing curriculum, instead being driven more by a practical desire to make a game using the tools provided. Despite this, the evolving design process resulted in activities which did allow the exploration of computational thinking and other curricular concepts. Given the potential to adapt this learning design to a more formal environment to address the needs outlined in the introductory chapter, from P2 onwards I began to augment the learning design to suit curriculum-oriented teaching and assessment of computational thinking concepts and skills, a process which resulted in a learning map of curricular concepts included here as Table 6.x.
+As outlined in Chapter 2, the focus on curricular knowledge and related skills developed by participants is the dominant thread in research on digital coding and game making [@kafai_constructionist_2015-1; @papert_mindstorms:_1980]. The research aims of this study focus on the less explored areas of the social and cultural aspects of the coding process of novices.
+
+<!-- As such, the design of this study does not fully address the exploration of the personal appropriation plane of activity.  -->
+
+In a classroom setting, group activity would likely incorporate a structural motivation to understand and utilise knowledge related to computational thinking concepts or similar curricular content.  
+
+In this informal learning context, participants did not request exploration of concepts aligned with the computing curriculum, instead being driven more by a practical desire to make a game using the tools provided.
+In Chapter 5, the role of GDPs as motivational goals was described.
+
+Despite this, the evolving design process resulted in activities which did allow the exploration of computational thinking and other curricular concepts.
+
+
+
+### On learning map.
+
+Given the potential to adapt this learning design to a more formal environment to address the needs outlined in the introductory chapter, from P2 onwards I began to augment the learning design to suit curriculum-oriented teaching and assessment of computational thinking concepts and skills, a process which resulted in a learning map of curricular concepts included here as Table 6.x.
 
 
 |      Coding Concepts    | Systems Patterns    | Design Practices|
@@ -233,7 +249,17 @@ Table 6.x. Learning Dimensions of the 3M Game Making Model
 
 <!-- NOTE - this map focuses on more concrete concepts,  -->
 
-Appendix.learningmap explores in more detail the evolution of this map, which acknowledges significant tensions in the integration of concepts into an informal context, and draws on the process and rationale of Bevan and Petrich's [-@bevan_learning_2015; -@petrich_it_2013] work to bring a similar learning map to a seemingly chaotic tinkering and making process in museum contexts. There is a tension in the evolution of this learning map, one familiar to teachers using project- and play-based approaches, between the naturalistic approach made possible by the non-formal learning environment and the desire to align with curricular concepts. It is of value to compare this observational approach to the design-driven process typified by research on Microworlds, which foregrounds the role of learning designers in shaping the affordances of (playful) learning environments to steer learners toward exploring curricular concepts. In much of the Microworlds research, these are often scientific or mathematical concepts: take, for example, geometry in Turtle computing with the LOGO language [@ernest_whats_1988]. While there are similarities between this design and the constructionist ethos behind LOGO, the leading motivation of this study is the creation of and acculturation to a game-making community. Kynigos [-@kynigos_black-and-white_2004-1] explores the tension between more targeted/restrictive and more adaptable technology toolsets using a white-box, black-box distinction (explored in the literature review), noting the difficulty of communicating the value of non-commodified, adaptable toolsets despite their exploratory potential. The design of this research's learning template can be seen as a half-baked Microworld [@kynigos_half-baked_2007], with the varied affordances of the design interpreted as invitations to contribute to an improvable boundary object [@kynigos_half-baked_2007, p.336]. This focus thus motivates and facilitates a discussion on a shared experience in a way that aligns with the sociocultural focus of this study.
+Appendix.learningmap explores in more detail the evolution of this map, which acknowledges significant tensions in the integration of concepts into an informal context, and draws on the process and rationale of Bevan and Petrich's [-@bevan_learning_2015; -@petrich_it_2013] work to bring a similar learning map to a seemingly chaotic tinkering and making process in museum contexts. There is a tension in the evolution of this learning map, one familiar to teachers using project- and play-based approaches, between the naturalistic approach made possible by the non-formal learning environment and the desire to align with curricular concepts.
+PLAY PARADOX - DEVELOP  
+
+I propose that this play paradox is addressed by orienting the leading/motivational activity of the learning design to be one aligned with the underlying goals of the participants. In this case to add features to their game.
+
+AS ALIGNED WITH AVOIDING PRINCIPLES FIRST APPROACH IN SGD.
+
+
+
+THIS NEEDS MOVING TO CHAPTER 5 OR CHAPTER 7
+It is of value to compare this observational approach to the design-driven process typified by research on Microworlds, which foregrounds the role of learning designers in shaping the affordances of (playful) learning environments to steer learners toward exploring curricular concepts. In much of the Microworlds research, these are often scientific or mathematical concepts: take, for example, geometry in Turtle computing with the LOGO language [@ernest_whats_1988]. While there are similarities between this design and the constructionist ethos behind LOGO, the leading motivation of this study is the creation of and acculturation to a game-making community. Kynigos [-@kynigos_black-and-white_2004-1] explores the tension between more targeted/restrictive and more adaptable technology toolsets using a white-box, black-box distinction (explored in the literature review), noting the difficulty of communicating the value of non-commodified, adaptable toolsets despite their exploratory potential. The design of this research's learning template can be seen as a half-baked Microworld [@kynigos_half-baked_2007], with the varied affordances of the design interpreted as invitations to contribute to an improvable boundary object [@kynigos_half-baked_2007, p.336]. This focus thus motivates and facilitates a discussion on a shared experience in a way that aligns with the sociocultural focus of this study.
 
 
 <!-- RETURN TO THIS TO REPRESENT SOME OF THE CHALLENGES AND DIFFICULTY OF SWIMMING AGAINST THE STREAM IN TERMS OF COMMODIFICIATION OF TOOLS -->
@@ -249,7 +275,12 @@ A summary of a book chapter [@chesterman_game_2023] exploring these issues with 
 
 ### The interrelationship of GDPs and the development of technical processes
 
-Given the limited focus of this thesis, only one dimension of personal appropriation is included here: the technical implementation of coding structures. The implementation of GDPs can encourage participants to adopt or share technical processes in various ways. These processes were sometimes introduced in a basic form through scaffolded activities, supporting documentation, or informal interactions between peers. The following observations illustrate how introduced processes were adapted and modified by the community.
+I now turning to mediational uses of GDPs in this personal plane.
+
+Given the greater focus on social and cultural domains of thesis, I focus on one aspect of personal appropriation in this section: namely the technical implementation of coding structures.
+WHY JUST ONE DIMENSION?
+
+The implementation of GDPs can encourage participants to adopt or share technical processes in various ways. These processes were sometimes introduced in a basic form through scaffolded activities, supporting documentation, or informal interactions between peers. The following observations illustrate how introduced processes were adapted and modified by the community.
 
 To integrate new gameplay design patterns or adapt existing ones in their games, participants needed to develop unfamiliar technical processes associated with computer coding, as well as foundational digital skills related to using a desktop personal computer. See Appendix: Digital Literacy for further details. One example of a skill developed by many participants was proficiency in keyboard and mouse use. Combined with the ability to navigate internet browser tabs, this facilitated movement between computer code, game prototypes, and supporting web-based documentation. Such personal appropriation and increasing fluidity are well illustrated in Toby’s repeated, solo, incremental changes to level design, as seen in Vignette 1.a. Most participants demonstrated increased fluency, particularly in areas such as creating, uploading, and integrating graphical assets, adjusting game challenges by modifying GDP elements, and engaging in coding processes such as debugging and code patching, which is explored in later sections. In line with CHAT theory, this can be interpreted as the gradual operationalisation of actions that initially required more explicit guidance, as discussed by Leontiev [@leontiev_activity_2009].
 
@@ -287,7 +318,9 @@ While the use of new techniques was driven by the implementation of GDPs, the fo
 
 <!-- **Code Patching as a guided technical process and the use of GDPs to nurture tactical responses to coding errors** -->
 
-Turning to the practice of code patching, a guided technical process designed to scaffold the coding process (see Glossary and Chapter 2), video evidence and observational journal notes highlight the potential of coupling code implementation with target behaviour, structured within a framework of GDPs. This patching process became an important element of documentation. Although code was provided, mistakes occurred in practice and additional customisations were introduced. An example of code patching in practice can be seen in Toby's careful copying and pasting of different lines of code from supporting materials into his game project (see V1a).
+Turning to the practice of code patching, a guided technical process designed to scaffold the coding process (see Glossary and Chapter 2), video evidence and observational journal notes highlight the potential of coupling code implementation with target behaviour, structured within a framework of GDPs. This patching process became an important element of documentation. Although code was provided, mistakes occurred in practice and additional customisations were introduced. An example of code patching in practice can be seen in Toby's careful copying and pasting of different lines of code from supporting materials into his game project (see V1a and Appendix.patching).
+
+
 
 Toby's success in using the code patching technique was supported by the UMC based structure of the game template in line with the UMC principles explored in the previous chapter and the high level of contextualisation provided by GDPs as a guiding framework in the learning design. This is illustrated in V1 when Toby alters the imported code producing a type of programming error I refer to as a glitch. This specific error occurs when the game continues to function but exhibits an unintended effect (see V1a). The glitch triggered an initial investigation prompted Toby to seek my assistance and required an iterative process of revision and cross-referencing with the original code snippet. From this and similar observations I propose that the tight coupling between code implementation and target behaviour in this case structured within GDPs scaffolds the debugging process and can be a valuable tool for facilitators.
 
@@ -862,7 +895,7 @@ The limitations here are on detail on how to enact identity formation via specif
 
 NOTE THIS SHOULD BE LIMITED AS EXPLORED LATER TOO. FLUENCY NOT AGENCY / MAKE A DISTINCTION/ - OR PERHAPS REMOVE.
 
-MOVE / COMPRESS - TO LR? MAKE LINK THERE? POTENTIAL OF GDP MENU? THIS EMERGED THO - SO WHERE TO PLACE IT? AT END OF CHAPTER 5? TELL THE STORY OF EVOLUTION IN DISCUSSION? 
+MOVE / COMPRESS - TO LR? MAKE LINK THERE? POTENTIAL OF GDP MENU? THIS EMERGED THO - SO WHERE TO PLACE IT? AT END OF CHAPTER 5? TELL THE STORY OF EVOLUTION IN DISCUSSION?
 
 The work of the constructionist school is rich in a legacy of designing for fluency, notably including: software microworlds, affordance rich tools sets facilitating open-ended experimentations, accessible multi-media authoring software and community of Scratch. One idea which while present in part in online community of Scratch is that of constructopedia, an evolving resource of inspirational design elements, and accompanying instructions.
 
