shifting stuff out of end of ch7 and version

--- a/_posts/thesis_chapters/tocs/2025-3-5-Design.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2025-3-5-Design.md_toc.md
@@ -34,8 +34,12 @@
         -   [**the potentially awesome impact of lifting the lid on
             authentic
             technologies**](#the-potentially-awesome-impact-of-lifting-the-lid-on-authentic-technologies)
-        -   [GDP as the germ cell of this
-            research](#gdp-as-the-germ-cell-of-this-research)
+        -   [The position of GDPs in Activity Systems as the germ cell
+            of this
+            research](#the-position-of-gdps-in-activity-systems-as-the-germ-cell-of-this-research)
+        -   [Outlining the key stages of GDP use in the structural
+            learning
+            design.](#outlining-the-key-stages-of-gdp-use-in-the-structural-learning-design.)
         -   [Summary and link to next
             chapter/s](#summary-and-link-to-next-chapters)
     -   [Parking Lot](#parking-lot)
