--- a/_posts/thesis_chapters/tocs/2025-3-6-Gdps.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2025-3-6-Gdps.md_toc.md
@@ -6,6 +6,7 @@
     -   [Introduction](#introduction)
     -   [The role of GDPs in the personal appropriation of concepts and
         processes](#the-role-of-gdps-in-the-personal-appropriation-of-concepts-and-processes)
+        -   [On learning map.](#on-learning-map.)
         -   [The interrelationship of GDPs and the development of
             technical
             processes](#the-interrelationship-of-gdps-and-the-development-of-technical-processes)
