ch 7 - helping roles

--- a/_posts/thesis_chapters/2025-3-6-Gdps.md
+++ b/_posts/thesis_chapters/2025-3-6-Gdps.md
@@ -643,23 +643,19 @@ Given the gap in research for appropriate frameworks to facilitate the process o
 
 The different types of GDPs available to participants to choose from in the menu of GDP documentation and code snippets allowed for a choice in participant making paths, enabling alignment with home interests. This point is well illustrated via the domain of polish/aesthetics in Vignette 5, where Madiha and Nasrin show identification with the graphical-making process and the process of bringing that aspect of creativity into their games. Beyond their internal family interaction, they share this artistic flair and attention to detail with the emerging learning community.
 
+In another example, Mark and Ed designed a game around the character of a train driver that needed to collect coal. In subsequent post course interview Mark describes the impact of the child feeling like they could bring their own identity and interest into the project. "I know just your eyes lit up when you realised you could expand your interests into gaming." See Appendix 4.x (Mark and Ed working with home interests)
 
 Another pair Clive and Pearl, the grandparents of Toby, included a narrative message at the start of their game surfacing the interest and expertise of the family as beekeepers (see V6). This sparked interesting conversations with other participants.
 
 In addition to issues of aesthetics, home knowledge of game mechanics and dynamics (the M and D of the MDA framework) also contributed to emerging cultural repertoires.
 
-
 As explored in the previous section, Vignette 4 gives several examples of participant feedback on the dynamics of Madiha's game in the level of the challenge experienced by players. Peers shared their experience of what makes a good game to bear in the feedback they shared. Turning to the area game mechanics, In see V1.b Bertie(c) comments on Toby(c)'s game, which has a dominant game experience of timed jumping: *"It’s like parkour in Minecraft but timed. It’s like playing the game Wipeout. Have you ever played Wipeout?"*. Parkour in Minecraft and Wipeout are both game experiences whose main gameplay mechanic is about judging jumps and landing accurately. Bertie makes links to his existing experience of games, making comparisons between Toby's game, commercial games, and his own. In doing so, Bertie is able to show his knowledge and analysis of gameplay patterns. Additionally, the guidance of Dan(p) for Toby(c) explored above in Vignette 7, saw the parent explicitly drawing out the child's home knowledge of games to enable an exploration of a different set of game mechanics. Thus, the tacit knowledge of GDPs of children and adults as game players serves them in knowledge-brokers roles in the process of feeding back and ideation [@wenger_communities_1998].
-
-
 
 The previous examples have outlined how participants used GDPs in  incorporating graphical, audio assets, and narrative elements into their games.  In Chapter 5 and Appendix.tech.gameframework I outlined the use of the MDA (mechanics, dynamics, and aesthetics) framework to theme the presentation of GDPs. I propose that this subdivision of GDPs scaffolds participants to elect to follow varied learning pathways based on their home interests in a way which  align with characteristics of the inclusive pedagogy universal design for learning (UDL) [@sanger_inclusive_2020]. Specifically, providing resources which allow exploration of  providing multiple means of engagement with the learning process
 
 The MDA framework can be profitably examined from the perspective of superficial and underlying characteristics of game elements. Thus those less intrinsically interested in the game play feel or challenge can engage with aspects of the game more aligned to other media projects in terms of the cast of characters the narrative of the game or the aesthetics of the graphical or audio design of the work.
 
-
 DVELOP THIS A BIT OR LINK TO ANOTHER BIT EXPLORING THIS
-
 
 ![Illustration 6.x -  MDA as an additional framework promoting multiple means of engagement - mapped to an grouping of GDPs  ](./Pictures/ch_6_mda_dia_2.png){width=95%}
 
@@ -702,8 +698,6 @@ Article on intangibility of game feel.2025-1-8-DiscussionConclusion
 <!-- In addition to the names of patterns as a lingua franca to comment on games during the process of playtesting, participants also    -->
 
 The implementation of popular or novel GDPs by participant pairs or individuals is often spread through peer activity. Both documented (those part of provided resources) and novel GDPs (those introduced by participants) were transmitted between participants, enriching the games of participants. At times, participants were influenced by playing the games of others, and at times, they would request the direct help of peers to implement GDPs in their own games.
-
-
 
 
 <!-- Other examples of propagating patterns include placing hazards in tricky places like a lava pit, the use of moving enemies and changes to jump dynamics. -->
