changes to table on characteritics and tensions

--- a/_posts/thesis_chapters/2025-3-5-Design.md
+++ b/_posts/thesis_chapters/2025-3-5-Design.md
@@ -618,9 +618,11 @@ REMOVED - ADD BACK IN LATER?
 
   - What contradictions arose in this research’s evolving design process and how were they addressed in the resulting CGD&P pedagogy?
 
-IS IT A GOOD IDEA TO TRY TO INCLUDE A SUMMARY TABLE OF THE RESONSES AND THE TENSIONS IN STRUCTURAL APPROACH. 
+INCLUDE A SUMMARY TABLE OF THE RESpONSES AND THE TENSIONS VIA THE THREE AREAS OF CONTRADICTION. 
 
-<!-- Add as an appendix anyway -
+https://docs.google.com/document/d/10uUm1JiqAg7i4ypdtihmXzteSN7zpKGpv8k9SyG0u2M/edit?tab=t.0
+
+<!-- Previous versions  -
 https://docs.google.com/document/d/18HrRPPx0-fj3PXVJTAf2dzYNTBSYGikpV_U0hu46r2c/edit?tab=t.0
 
 https://docs.google.com/document/d/1DRgpgIUfq5XIktYy-lX4WlviUDnffNc0v8SOeLGgHho/edit?tab=t.0
